refactor: reuse Random instance and use Stream.toList